tests/NormalTests/paczka1/small_fuzzy/70556783.err
Error in line 12: Aw1 A836 32,w
Error in line 11: vn3ns8v A71 3,3
